format.css
*  {
    overflow: hidden;
}

button:hover {
    background-color: #DAC6D2; 
}

.body{
    background-color: #E0E0E0;
}

.container{
    width: 30%;
    margin: auto;
    height: 85%;
    margin-top: 2%; 
    padding: 2%; 
    background-color: #A0AFB7;
    border: 3px solid black;
    border-radius: 15px;
}

.display{
    width: 98%;
    height: 25%;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 3em;
    background-color: white;
    margin: 1%; 
    border-radius: 3px;
    border: 2px solid black;
    display: flex;
    flex-direction: column;;
}

.buttons{
    height: 75%;
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.clear{
    height: 15%;
    width: 32.4%;
    margin: 0.3%;
    margin-right: 0.6%;
    border-radius: 15px;
}

.divide{
    height: 15%;
    width: 32.4%;
    margin: 0.3%;
    margin-right: 0.6%;
    border-radius: 15px;
}

.multiply{
    height: 15%;
    width: 32.4%;
    margin: 0.3%;
    border-radius: 15px;
}

.numbers{
    height: 100%;
    width: 73.5%;
    margin: 0.3%;
    margin-top: 1%;
}

.button{
    width: 31.5%;
    margin: .3%;
    height: 20%;
    border-radius: 15px;
    background-color:  #E9EAEC;
    border: 2px solid black;
    cursor: pointer; 
    margin-bottom: 1%;
    font-size: 150%;
}

.zero{
    height: 20%;
    margin: .3%;
    width: 65.1%;
    border-radius: 15px;
    background-color: #E9EAEC;
    border: 2px solid black;
    cursor: pointer; 
    font-size: 150%;
}

.lastRow{
    display: flex; 
    flex-direction: column;
    width: 25%;
    margin: 0.3%;
    margin-top: 1%;
}

.subtract{
    margin: 0.3%; 
    height: 20%;
    border-radius: 15px;
    background-color: #E9EAEC;
    border: 2px solid black;
    cursor: pointer; 
    margin-top: 1%;
    font-size: 150%;
}

.add{
    margin: 0.3%; 
    height: 20%;
    margin-top: 3%;
    border-radius: 15px;
    background-color: #E9EAEC;
    border: 2px solid black;
    cursor: pointer; 
    font-size: 150%;
}

.equal{
    margin: 0.3%; 
    height: 40.4%;
    margin-top: 1.5%;
    border-radius: 15px;
    background-color: #E9EAEC;
    border: 2px solid black;
    cursor: pointer; 
    margin-top: 5%;
    font-size: 150%;
}

.topRow{
    width: 100%; 
    height: 100%; 
    margin: 0.2%; 
    background-color: #E9EAEC;
    border: 2px solid black;
    border-radius: 15px; 
    cursor: pointer; 
    font-size: 150%;
}

.info{
    width: 100%;
    height: 50%;
    margin: 0.2%;
}

